--- a/.env
+++ b/.env
@@ -5,11 +5,11 @@ APP_DEBUG=true
 APP_URL=http://local-laravel.com
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3306
 DB_DATABASE=laravel
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
